--- a/main.html
+++ b/main.html
@@ -10,6 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="master">
+		<p>First Paragraph</p>
+	</div>
 
 </body>
 
