--- a/main.html
+++ b/main.html
@@ -11,9 +11,22 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div class="master">
-		<p>First Paragraph</p>
+		<p>First Paragraph</p
 	</div>
-
+	<div class="master1">
+		<p>lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua obcaecati ipsa assumenda doloremque ipsam eos cupiditate libero fuga</p>
+		<p>lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua obcaecati ipsa assumenda doloremque ipsam eos cupiditate libero fuga</p>
+		<p style="color:red">lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua obcaecati ipsa assumenda doloremque ipsam eos cupiditate libero fuga</p>
+	</div>
+	<div>
+		<ul>
+			<li>First item</li>
+			<li>Second item</li>
+			<li>Third item</li>
+			<li>Fourth item</li>
+			<li>Fifth item</li>
+		</ul>
+	</div>
 </body>
 
 </html>
