--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<p style="color:red">lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua obcaecati ipsa assumenda doloremque ipsam eos cupiditate libero fuga</p>
 	</div>
 	<div>
-		<ul>
+		<ul class="ru">
 			<li>First item</li>
 			<li>Second item</li>
 			<li>Third item</li>
